<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MyPage.RegistSupplement.RegistSupplementActivity"
    android:orientation="vertical"
    android:background="@color/dynoMainWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom">
            <EditText
                android:id="@+id/input_search"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/hint_supplement"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/btn_search"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/dynoGrey">

        <LinearLayout
            android:id="@+id/yes_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/result_supplement_no"
                    android:textSize="17sp"
                    android:textColor="@color/dynoBlack"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/result_supplement_name"
                    android:textSize="17sp"
                    android:textColor="@color/dynoBlack"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/result_supplement_company"
                    android:textSize="17sp"
                    android:textColor="@color/dynoBlack"
                    android:gravity="center"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/no_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_no"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <Button
                android:id="@+id/camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_no_btn_ocr"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>